# opengl-sandbox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-cpp.sh  run-cpp.sh
cpp/: .clangd  CMakeLists.txt
cpp/.cache/clangd/index/: main.cpp.1CF1099863BEB39D.idx
cpp/include/: utils.h
cpp/include/glad/: glad.h
cpp/include/glm/ext/: matrix_transform.inl
cpp/src/: glad.c  main.cpp  utils.cpp
shader/: hello_texture.glsl.frag  hello_triangle.glsl.frag  hello_triangle.glsl.vert  uniform_var.glsl.frag
